# learn

Learn/Finance/Python/: main.py  set.py
Learn/Mathematics/Python/: limit.py  main.py  set.py  w
Learn/Mathematics/数列/: series.py
Learn/Program/: Ubuntu-Lnmp安装.txt
Learn/Program/CGAL/: install.url
Learn/Program/CmakeTemplate/: CMakeLists.txt  md
Learn/Program/CmakeTemplate/include/: funcA.h
Learn/Program/CmakeTemplate/src/: CMakeLists-子项目.txt  func.c  main.c
Learn/Program/OpenGL/: makefile  test  test.c
Learn/Program/Oracel/: Oracle-11g-doc.url  Oracle-sql-hle.url  Oracle-sql.url  sql-plus.url  sql.txt
Learn/Program/VIM/: .vimrc  note.txt  vim.test
Learn/Program/c++/: C++-Style.text  a.out  const.cpp  fun_point.cpp  h和cpp文件.txt  i.cpp  iterator.cpp  static.cpp  typedef.txt  二级指针--char数组.cpp  函数指针.txt  成员函数指针用法.txt
Learn/Program/c++11/: a.out  auto_pointer.cpp  main.cpp  makefile
Learn/Program/design/: design  design.cpp  design.html
Learn/Program/extern_namespace/: main.cpp  t1.cpp  t1.h
Learn/Program/gdb/: command
Learn/Program/git/: GIT版本管理详解 · GitBook.html  Git 在团队中的最佳实践--如何正确使用Git Flow - 敏捷的水 - 博客园.html  git.txt  服务端部署.txt  测试说明.txt
Learn/Program/linux/: a.out  command  condition.c  config.h  test.txt
Learn/Program/lnmp/: lnmp  rewrite
Learn/Program/macro/: macro.cpp
Learn/Program/make/: debug  do.cpp  main  main.cpp  make2.txt  makefile  test.cpp
ProwDesign/: AI.feb  AI.fem  All.fem  Code.feb  Code.fem  Geometry.feb  Geometry.fem  OpenGL.feb  OpenGL.fem  QT.fem  ctp.feb  ctp.fem  k-learn.sws  经济.feb  经济.fem
(+423 files in other folders)
